--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
                     <a href="https://www.linkedin.com/in/wagner-silva-6a163555/">Contato</a>
                 </li>
             </ul>
-
             <!-- <ul class="list-unstyled CTAs">
                 <li>
                     <a href="index.html" class="article">Voltar ao início</a>
@@ -130,7 +129,6 @@
 
                     <a href="https://www.linkedin.com/in/wagner-silva-6a163555/"><i
                             class="fab fa-linkedin-in text-light"></i></a>
-
                 </div>
             </nav>
 
@@ -190,7 +188,7 @@
                                     <!-- Label -->
                                     <h5 class="color-blue pb-2 pt-1"><i class="fas fa-percentage"></i> Taxas</h5>
                                     <!-- Title -->
-                                    <h4 class="font-weight-bold card-title color-gray">Selic</h4>
+                                    <h4 class="font-weight-bold card-title color-gray">O que é Selic?</h4>
                                     <!-- Text -->
                                     <p class="card-text">Para comerçarmos aprender sobre investimentos precisamos
                                         entender a taxa Selic.</p>
@@ -220,10 +218,10 @@
                                     <!-- Label -->
                                     <h5 class="color-blue pb-2 pt-1"><i class="fas fa-percentage"></i> Taxas</h5>
                                     <!-- Title -->
-                                    <h4 class="font-weight-bold card-title color-gray">CDI</h4>
+                                    <h4 class="font-weight-bold card-title color-gray">O que é CDI?</h4>
                                     <!-- Text -->
-                                    <p class="card-text">Para comerçarmos aprender sobre investimentos precisamos
-                                        entender como a CDI funciona.</p>
+                                    <p class="card-text"> Você sabe como funciona? por que foi criado? e como
+                                        ele afeta seus investimentos?</p>
                                     <!-- Button -->
                                     <a href="cdi.html">
                                         <button class="button">
@@ -250,10 +248,10 @@
                                     <!-- Label -->
                                     <h5 class="color-blue pb-2 pt-1 "><i class="fas fa-percentage"></i> Taxas</h5>
                                     <!-- Title -->
-                                    <h4 class="font-weight-bold card-title color-gray">IPCA</h4>
+                                    <h4 class="font-weight-bold card-title color-gray">O que é IPCA?</h4>
                                     <!-- Text -->
-                                    <p class="card-text">Para comerçarmos aprender sobre investimentos precisamos
-                                        entender comoo IPCA funciona.</p>
+                                    <p class="card-text">Este índice é super importante, ele afeta a sua vida e seus
+                                        investimentos a todo momento.</p>
                                     <!-- Button -->
                                     <a href="ipca.html">
                                         <button class="button">
@@ -358,6 +356,45 @@
                     </div> <!-- row -->
                 </div>
             </div> <!-- container -->
+            <!-- Footer -->
+            <footer class="page-footer mt-50">
+
+                <!-- Footer Elements -->
+                <div class="container-fluid pt-4">
+
+                    <!-- Social buttons -->
+                    <ul class="list-unstyled list-inline text-center">
+                        <li class="list-inline-item">
+                            <a class="btn-floating btn-li mx-1"
+                                href="https://www.linkedin.com/in/wagner-silva-6a163555/">
+                                <i class="fab fa-linkedin-in color-blue"> </i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn-floating btn-dribbble mx-1" href="https://dribbble.com/wagstalos">
+                                <i class="fab fa-dribbble color-blue"> </i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn-floating btn-dribbble mx-1" href="https://github.com/wagstalos">
+                                <i class="fab fa-github-alt color-blue"></i>
+                            </a>
+                        </li>
+                    </ul>
+                    <!-- Social buttons -->
+
+                </div>
+                <!-- Footer Elements -->
+
+                <!-- Copyright -->
+                <div class="footer-copyright text-center py-3">© 2019 Copyright:
+                    <a href="https://wpsgames.com.br"> WPS Games</a>
+                </div>
+                <!-- Copyright -->
+
+            </footer>
+            <!-- Footer -->
+
 
             <!-- jQuery CDN - Slim version (=without AJAX) -->
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
