--- a/renda_variavel.html
+++ b/renda_variavel.html
@@ -242,7 +242,8 @@
 
                                         </div>
 
-                                        <div class="color-gray mt-4"> <i> <b> *Obs. </b> As ações são negociadas em lotes de 100 mas se você quiser comprar no
+                                        <div class="color-gray mt-4"> <i> <b> *Obs. </b> As ações são negociadas em
+                                                lotes de 100 mas se você quiser comprar no
                                                 fracionado ou seja uma ação apenas, é só inserir o F no final do
                                                 código, Exemplo: klbn3f </i>
                                         </div>
@@ -321,7 +322,7 @@
                                             (FII).
                                         </p>
                                         <blockquote>
-                                            <p> <i> Importante para comprar e vender ações temos que respeitar o horario
+                                            <p> <i> Importante para comprar e vender ações temos que respeitar o horário
                                                     de
                                                     negociação da B3.</i></p>
                                         </blockquote>
