--- a/selic.html
+++ b/selic.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="manifest" href="/manifest.json">
-    
+
 
     <!-- Font Awesome JS -->
     <script src="https://kit.fontawesome.com/1ffaa2226d.js" crossorigin="anonymous"></script>
@@ -63,10 +63,22 @@
                     lastreadas em títulos públicos federais e cursadas no referido sistema ou em câmaras de
                     compensação e liquidação de ativos, na forma de operações compromissadas. </p>
                 <p>
-                    Como a taxa Selic representa a remuneração das instituições financeiras nas operações com
-                    títulos públicos, ela é comumente utilizada como um índice pelo qual as taxas de juros no
-                    Brasil se balizam. Ela é um instrumento de política monetária utilizado pelo Copom para
-                    controlar os juros no país.
+                    No mercado de capitais existem diversos fatores que são importantes e devemos conhecer ao menos o
+                    mínimo sobre eles para que possamos compreender e buscar bons rendimentos em nossos investimentos,
+                    apesar de serem constantemente mencionados na mídia e em conversas informais pouco se sabe sobre,
+                    dentre estes assuntos comuns mas pouco compreendidos temos a TAXA SELIC.
+                </p>
+                <p>
+                    A SELIC é a taxa básica de Juros da economia brasileira. Esta taxa é determinada pelo Banco Central
+                    em reuniões realizadas a cada 45 dias, a SELIC é o maior instrumento de politica monetária para
+                    controlar a inflação, nos períodos de inflação alta em razão do alto consumo e abundancia de
+                    crédito, a tendência é que a SELIC seja elevada para que os bancos também subam os juros nos
+                    financiamentos, cartões de crédito e empréstimos, consequentemente a isto o consumo será
+                    desestimulado e a inflação voltará a cair. O contrario também é verdadeiro, nos períodos de baixo
+                    consumo o governo tende a baixar a SELIC para que os bancos captem dinheiro mais barato e emprestem
+                    ao consumidor com taxas menores e assim a economia é reaquecida e o PIB cresce. o Banco Central (BC)
+                    age como um pêndulo, sempre acompanhando o andar da economia e determinando a SELIC que mais se
+                    adapta àquele momento.
                 </p>
                 <blockquote>
                     <p class="mt-50">
@@ -74,6 +86,10 @@
                         taxa.
                     </p>
                 </blockquote>
+
+                <div class="color-gray mt-50">
+                    <i> Texto: Caio Cesar</i>
+                </div>
             </div>
             <div class="row mt-50">
                 <div class="offset-md-3 col-md-6 col-sm-12">
