add do logotipo e favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Investimentos</title>
+    <title>Investiment8</title>
     <meta name="theme-color" content="#151a2b">
     <meta name="wps games" content="investimento8">
     <meta name="description" content="Game developer, wps games">
@@ -19,7 +19,7 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="manifest" href="manifest.json">
-
+    <link rel="shortcut icon" href="img/favicon.ico">
     <!-- Font Awesome JS -->
     <script src="https://kit.fontawesome.com/1ffaa2226d.js" crossorigin="anonymous"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -40,7 +40,8 @@
         <!-- Sidebar Holder -->
         <nav id="sidebar">
             <div class="sidebar-header">
-                <h3>Menu</h3>
+                <!-- <h3>Menu</h3> -->
+                <img class="card-img-top" src="img/invest8.png" alt="logotipo invest8">
             </div>
 
             <ul class="list-unstyled components">
