--- a/renda_fixa.html
+++ b/renda_fixa.html
@@ -12,7 +12,7 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- CODELAB: Add link rel manifest -->
     <link rel="manifest" href="/manifest.json">
-
+    <link rel="shortcut icon" href="img/favicon.ico">
     <!-- Font Awesome JS -->
     <script src="https://kit.fontawesome.com/1ffaa2226d.js" crossorigin="anonymous"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
