Otimização de imagens

--- a/renda_variavel.html
+++ b/renda_variavel.html
@@ -118,7 +118,7 @@
                                         <div class="underline"></div>
                                         <div class="row align-items-center justify-content-center">
                                             <div class="col-md-3 col-sm-12 text-center mt-4">
-                                                <img src="img/acoes.svg"
+                                                <img src="img/acoes.png"
                                                     alt="mulher um homem um porquinho voando e no fundo um gráfico"
                                                     class="img-fluid ">
 
