--- a/renda_fixa.html
+++ b/renda_fixa.html
@@ -102,7 +102,7 @@
                                         <h2 class="color-gray m-4 text-center">Quais os Tipos?</h2>
                                         <div class="row align-items-center justify-content-center">
                                             <div class="col-md-3 col-sm-12 text-center">
-                                                <img src="img/example-19.svg" alt="mulher segurando um cofrinho"
+                                                <img src="img/example-19.png" alt="mulher segurando um cofrinho"
                                                     class="img-fluid text-center">
 
                                             </div>
