add : selic cdi ibov via API

--- a/ipca.html
+++ b/ipca.html
@@ -31,7 +31,7 @@
         <!-- Como um link -->
         <nav class="navbar bg-degrade">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><i class="fas fa-arrow-left"></i></a>
+                <a class="navbar-brand" href="index.php"><i class="fas fa-arrow-left"></i></a>
             </div>
         </nav>
         <div class=" bg-degrade header-inner">
@@ -75,7 +75,7 @@
 
                         As despesas consideradas são divididas em grupos que fazem parte do orçamento familiar:
                     </p>
-                    <ul class="ml-4">
+                    <ul class="ml-4 text-dark">
                         <li> Alimentação e bebidas;</li>
                         <li>Transportes;</li>
                         <li> Habitação;</li>
@@ -96,7 +96,7 @@
                     </p>
                     <div class="row mt-50">
                         <div class="col">
-                            <a href="cdi.html">
+                            <a href="cdi.php">
                                 <button class="button">
                                     <span><i class="fas fa-arrow-left"></i> <b class="ml-2"></b></span>
                                 </button>
