--- a/renda_variavel.html
+++ b/renda_variavel.html
@@ -31,7 +31,7 @@
         <!-- Como um link -->
         <nav class="navbar bg-degrade">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><i class="fas fa-arrow-left"></i></a>
+                <a class="navbar-brand" href="index.php"><i class="fas fa-arrow-left"></i></a>
             </div>
         </nav>
         <div class=" bg-degrade header-inner">
